--- a/css/style.css
+++ b/css/style.css
@@ -1079,6 +1079,7 @@ a:focus {
 
 .team .team-img img {
     width: 100%;
+    height: 100px;
     transform: scale(1.1);
     margin-bottom: -15px;
     transition: .3s;
