--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ a:focus {
     position: relative;
     transition: .5s;
     z-index: 999;
+    background-color: white;
 }
 
 .navbar.nav-sticky {
