--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ a:focus {
     top: 0;
     width: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    background-color: white;
     transition: .5s;
 }
 
