--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ a:focus {
 /********** Hero CSS ***********/
 /*******************************/
 .carousel {
-    position: relative;
+    position: absolute;
     width: 100%;
     min-height: 300px;
     background: #ffffff;
