--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ a:focus {
 
 .navbar .navbar-brand {
     margin: 0;
-    color: #ffffff;
+    color: #000000;
     font-size: 45px;
     line-height: 0px;
     font-weight: 700;
