--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ a:focus {
     width: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
     transition: .5s;
+    color: #ffffff;
 }
 
 .navbar .navbar-brand {
