--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,6 @@ a:focus {
     width: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
     transition: .5s;
-    color: #ffffff;
 }
 
 .navbar .navbar-brand {
@@ -295,7 +294,7 @@ a:focus {
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
     padding: 10px 15px 8px 15px;
-    color: #000000;
+    color: #f27d2d;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover,
