--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ a:focus {
 .carousel .carousel-img img {
     width: 100%;
     height: 60%;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 .carousel .carousel-text {
