--- a/css/style.css
+++ b/css/style.css
@@ -402,8 +402,8 @@ a:focus {
 }
 
 .carousel .carousel-img img {
-    width: 100%;
-    height: 60%;
+    /* width: 100%;
+    height: 60%; */
     /* object-fit: cover; */
 }
 
