--- a/css/style.css
+++ b/css/style.css
@@ -383,8 +383,8 @@ a:focus {
 
 .carousel .carousel-img {
     position: relative;
-    width: 100%;
-    height: 60%;
+    width: 100px;
+    height: 60px;
     min-height: 100px;
     text-align: right;
     overflow: hidden;
@@ -402,9 +402,9 @@ a:focus {
 }
 
 .carousel .carousel-img img {
-    /* width: 100%;
-    height: 60%; */
-    /* object-fit: cover; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .carousel .carousel-text {
