--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ a:focus {
 
 .carousel .carousel-img {
     position: relative;
-    width: 100px;
+    width: 100%;
     height: 60px;
     min-height: 100px;
     text-align: right;
