--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ a:focus {
 .carousel .carousel-img {
     position: relative;
     width: 100%;
-    height: 60px;
+    height: 60%;
     min-height: 100px;
     text-align: right;
     overflow: hidden;
