--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,8 @@ a:focus {
 .page-header {
     position: relative;
     margin-bottom: 45px;
-    padding: 210px 50px 90px 0;
+    margin-top: 45px;
+    padding: 210px 0 90px 0;
     text-align: center;
     background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/topper.webp);
     background-attachment: fixed;
