--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ a:focus {
 }
 
 .carousel .carousel-text h1 {
-    text-align: center;
+    text-align: right;
     color: #ffffff;
     font-size: 60px;
     font-weight: 700;
@@ -427,7 +427,7 @@ a:focus {
 
 .carousel .carousel-text p {
     color: #ffffff;
-    text-align: center;
+    text-align: right;
     font-size: 20px;
     margin-bottom: 25px;
 }
