--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ a:focus {
 
 .carousel .carousel-text {
     position: absolute;
-    max-width: 700px;
+    max-width: 100%;
     display: flex;
     align-items: right;
     justify-content: right;
