--- a/css/style.css
+++ b/css/style.css
@@ -576,8 +576,8 @@ a:focus {
   margin-top: 150px;
   padding: 210px 0 90px 0;
   text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../img/topper.webp);
+  /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/topper.webp); */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
