fixing galleru part

--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ a:focus {
   position: relative;
   padding: 0 12px;
   font-size: 22px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .page-header a:hover {
