--- a/css/style.css
+++ b/css/style.css
@@ -830,7 +830,7 @@ a:focus {
   position: relative;
   width: 100%;
   margin: 45px 0;
-  background: rgba(0, 0, 0, 0.8);
+  /* background: rgba(0, 0, 0, 0.8); */
 }
 
 .donate .donate-content {
