fixing galleru part

--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ a:focus {
   top: -2px;
   right: -7px;
   text-align: center;
-  color: #000000;
+  color: #ffffff;
 }
 
 .page-header a:last-child::after {
